--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "react-redux": "^3.1.0",
     "react-router": "^2.0.0",
     "react-router-redux": "^2.1.0",
+    "react-star-rating-component": "^1.0.0",
     "redux": "^3.3.1",
     "redux-actions": "^0.9.0",
     "redux-api-middleware": "^1.0.0-beta3",
